--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.amrdeveloper.reactbuttonlibrary.MainActivity">
 
+
+    <com.amrdeveloper.reactbutton.ReactButton
+        android:layout_width="wrap_content"
+        android:id="@+id/reaction_btn"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
